fix: preserse white space

--- a/css/index.css
+++ b/css/index.css
@@ -8,9 +8,14 @@ body {
     DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
+.typing-container {
+  white-space: pre;
+}
+
 .typing-tip {
   position: relative;
   cursor: help;
+  display: inline;
 }
 
 .typing-tip:before {
@@ -32,6 +37,8 @@ body {
 
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
+
+  pointer-events: none;
 }
 
 .typing-tip:after {
@@ -50,6 +57,8 @@ body {
 
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
+
+  pointer-events: none;
 }
 
 .typing-tip:hover {
